--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -685,7 +685,19 @@
    "execution_count": null,
    "id": "c788150c-86af-4795-950e-767cb4accb38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing mystem to C:\\Users\\vladislav/.local/bin\\mystem.exe from http://download.cdn.yandex.net/mystem/mystem-3.1-win-64bit.zip\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\vladislav\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n",
+      "261it [03:21,  1.02it/s]"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -766,39 +778,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "af9fec26-de9d-453b-a09b-8ad64c7e8869",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\vladislav.sterkhov\\AppData\\Roaming\\nltk_data.\n",
-      "[nltk_data]     ..\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "10000it [00:01, 5282.54it/s]\n",
-      "100%|██████████| 10000/10000 [00:00<00:00, 23583.19it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('банк', 39765)\n",
-      "('карта', 17002)\n",
-      "('день', 10248)\n",
-      "('деньги', 10244)\n",
-      "('сотрудник', 9142)\n",
-      "('кредит', 8496)\n",
-      "('клиент', 8383)\n",
-      "('весь', 8302)\n",
-      "('отделение', 7702)\n",
-      "('счет', 7420)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gensim.corpora import Dictionary\n",
     "from gensim.models import TfidfModel\n",
@@ -995,6 +978,164 @@
     "lsi = lsimodel.LsiModel(corpus=corpus_tfidf, id2word=dictionary, num_topics=30)\n",
     "print(lsi.show_topics(5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a516ade3-e351-42b3-a775-99aa2d6c99e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Сделаем обучающее множество из мешка слов и рейтинга 1 и 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9c51be28-99a1-4924-80a4-4ed6c3c8e3b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\vladislav\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "10000it [00:02, 3623.84it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import bz2\n",
+    "from tqdm import tqdm\n",
+    "import json\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "source_dir = \"./after_process/\"\n",
+    "texts = []\n",
+    "resp_array = []\n",
+    "#for file_bz2 in listdir(source_dir):\n",
+    "with bz2.BZ2File(source_dir+\"banks_responses_1670583357.json.bz2\", 'r') as thefile:\n",
+    "    for row in tqdm(thefile):\n",
+    "        resp = json.loads(row)\n",
+    "        resp_array.append(resp)\n",
+    "        if (len(resp['text'].split()) > 0):\n",
+    "            texts.append(resp['text'])\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(resp_array)\n",
+    "df = df.dropna()\n",
+    "df = df.reset_index(drop=True) \n",
+    "\n",
+    "\n",
+    "df = df.loc[(df['rating_grade'] == 1) | (df['rating_grade'] == 5)]\n",
+    "y = df.rating_grade\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer(max_features=1500, min_df=5, max_df=0.7)\n",
+    "X = vectorizer.fit_transform(df.text).toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5100b8d-0c83-492b-b40e-b6ac1b0e42e0",
+   "metadata": {},
+   "source": [
+    "Разделим на обучающее и тестовое множество и обучим модель случайного дерева"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "37380c2d-4d6f-42ad-8dbd-d1077368c686",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier metrics:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.92      1.00      0.96       546\n",
+      "         5.0       0.98      0.54      0.70       106\n",
+      "\n",
+      "    accuracy                           0.92       652\n",
+      "   macro avg       0.95      0.77      0.83       652\n",
+      "weighted avg       0.93      0.92      0.91       652\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "rfc=RandomForestClassifier(n_estimators=100)\n",
+    "rfc.fit(x_train, y_train)\n",
+    "predictions_rfc = rfc.predict(x_test)\n",
+    "print('RandomForestClassifier metrics:\\n', classification_report(y_test, predictions_rfc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52c77122-26e3-4117-8a82-9c8f6f20cd58",
+   "metadata": {},
+   "source": [
+    "Далее проверим данную можель с использованием TFIDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ea2cb321-7c8f-4af1-9a19-67a3cc2c4219",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier TFIDF metrics:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.92      1.00      0.96       545\n",
+      "         5.0       0.97      0.56      0.71       107\n",
+      "\n",
+      "    accuracy                           0.92       652\n",
+      "   macro avg       0.94      0.78      0.83       652\n",
+      "weighted avg       0.93      0.92      0.92       652\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "tfidfconverter = TfidfTransformer()\n",
+    "X2 = tfidfconverter.fit_transform(X).toarray()\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X2, y, test_size=0.2)\n",
+    "\n",
+    "rfc=RandomForestClassifier(n_estimators=100)\n",
+    "rfc.fit(x_train, y_train)\n",
+    "predictions_rfc = rfc.predict(x_test)\n",
+    "print('RandomForestClassifier TFIDF metrics:\\n', classification_report(y_test, predictions_rfc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd767dcb-018c-4e19-9889-7474fb4dbcb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Для данной задачи показатели влияют на показатели recall и f1-score положительно"
+   ]
   }
  ],
  "metadata": {
@@ -1013,7 +1154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
